--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     </style>
 </head>
-<body>
+<body  class="bg-secondary">
     <!-- 首頁 -->
     <section id="hero">
         <div class="hero-container">
@@ -23,8 +23,8 @@
                 <h1>歡迎來Wengo</h1>
                 <h2>讓我們來 <span class="rotating">抓住美麗的夢想</span></h2>
                 <div class="actions">
-                    <a href="#about" class="btn-get-started">充實自我</a>
-                    <a href="#services" class="btn-services">我們實踐的腳步</a>
+                    <a href="#about" class="btn-services fw-bold text-decoration-none">充實自我</a>
+                    <a href="#services" class="btn-services fw-bold text-decoration-none">實踐我們的腳步</a>
                 </div>
             </div>
         </div>
@@ -32,10 +32,9 @@
 
     <!-- 首頁end -->
 
-    <!-- title -->
-    <nav class="navbar navbar-expand-sm navbar-light  fixed-top" id="neubar">
-        <div class="container">
-            <!-- <a class="navbar-brand" href="#home"><img src="/static_files/images/logos/logo_2.png" height="60" /></a> -->
+    <!-- menu -->
+    <nav class="navbar navbar-expand-sm navbar-light fixed-top" id="neubar">
+        <div class="container">           
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,10 +46,10 @@
                         <a class="nav-link mx-2 active" aria-current="page" href="#">首頁</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-2 active" href="#movie">影片介紹</a>
+                        <a class="nav-link mx-2 active" href="#Carousel">最新活動</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-2 active" href="#">XXX</a>
+                        <a class="nav-link mx-2 active" href="#movie">影片介紹</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-2 active" href="#gallery"> 回憶畫廊</a>
@@ -70,20 +69,64 @@
             </div>
         </div>
     </nav>
+    <!-- menu end-->
 
 
-    <!-- movie -->
-    <div id="movie"></div>
+    <!-- 輪播 -->
+    <div id="Carousel" class="text-center"><p><h2>最新活動</h2></p></div>
+    <div class="container-carousel">
+        <!-- Carousel -->
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+            <!-- Indicators/dots -->
+            <div class="carousel-indicators  data-bs-interval=1000">
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active d-block w-100"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="1" class="d-block w-100"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="2" class="d-block w-100"></button>
+            </div>
+
+            <!-- The slideshow/carousel -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://picsum.photos/id/20/1920/600" alt="Los Angeles" class="d-block"
+                        style="width:100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://picsum.photos/id/22/1920/600" alt="Chicago" class="d-block" style="width:100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://picsum.photos/id/23/1920/600" alt="New York" class="d-block" style="width:100%">
+                </div>
+            </div>
+
+            <!-- Left and right controls/icons -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+        <!-- <div class="row">
+            <div class="col">
+
+            </div>
+        </div> -->
+    </div>
+    <!-- 輪播 end -->
+
+    <!-- movies -->
+    <div id="movie" class="text-center"><p><h2>影片介紹</h2></p></div>
     <div class="container-fluid container-1">
         <div class="row h-100">
-            <div class="col-sm-12 col-lg-6 bg-warning p-sm-1 p-lg-5">
+            <div class="col-sm-12 col-lg-6  p-sm-1 p-lg-5">
                 <iframe class="w-100 h-100" src="https://www.youtube.com/embed/L0MK7qz13bU?si=y0NR9p4LHHfjgAiK"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             </div>
-            <div class="col-sm-12 col-lg-6 bg-secondary">
+            <div class="col-sm-12 col-lg-6 ">
                 <div class="w-100 h-100 p-5 mt-5 border border-info">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis sequi totam nulla quos corporis hic
                     accusamus modi culpa at minima! Laboriosam tempore provident incidunt, excepturi beatae laudantium
@@ -161,7 +204,59 @@
     </div>
 
 
+<!-- imgcard -->
+<div id="link3"></div>
+<div class="container-fluid container-h mt-3 container-card">
+    <div class="row justify-content-around align-items-center">
+        <div class="col-12 col-lg-4 text-center">
+            <h2>Card Image</h2>
+            <p>Image at the top (card-img-top):</p>
+            <div class="card mx-auto" style="width:400px">
+                <img class="card-img-top" src="https://picsum.photos/id/15/400/300" alt="Card image"
+                    style="width:100%">
+                <div class="card-body">
+                    <h4 class="card-title">John Doe</h4>
+                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer
+                    </p>
+                    <a href="#" class="btn btn-primary">See Profile</a>
+                </div>
+            </div>
+            <br>
+        </div>
 
+        <div class="col-12 col-lg-4 text-center">
+            <h2>Card Image</h2>
+            <p>Image at the top (card-img-top):</p>
+            <div class="card mx-auto" style="width:400px">
+                <img class="card-img-top" src="https://picsum.photos/id/13/400/300" alt="Card image"
+                    style="width:100%">
+                <div class="card-body">
+                    <h4 class="card-title">John Doe</h4>
+                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer
+                    </p>
+                    <a href="#" class="btn btn-primary">See Profile</a>
+                </div>
+            </div>
+            <br>
+        </div>
+        <div class="col-12 col-lg-4 text-center">
+            <h2>Card Image</h2>
+            <p>Image at the top (card-img-top):</p>
+            <div class="card mx-auto" style="width:400px">
+                <img class="card-img-top" src="https://picsum.photos/id/16/400/300" alt="Card image"
+                    style="width:100%">
+                <div class="card-body">
+                    <h4 class="card-title">John Doe</h4>
+                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer
+                    </p>
+                    <a href="#" class="btn btn-primary">See Profile</a>
+                </div>
+            </div>
+            <br>
+        </div>
+    </div>
+</div>
+<!-- imgcard end-->
 
 
 
