--- a/index.html
+++ b/index.html
@@ -87,15 +87,14 @@
 
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://picsum.photos/id/20/1920/600" alt="Los Angeles" class="d-block"
-                        style="width:100%">
+                <div class="carousel-item active" data-bs-interval="2000">
+                    <img src="https://picsum.photos/id/1079/1920/600" alt="Los Angeles" class="d-block" style="width:100%">
                 </div>
-                <div class="carousel-item">
-                    <img src="https://picsum.photos/id/22/1920/600" alt="Chicago" class="d-block" style="width:100%">
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="https://picsum.photos/id/1077/1920/600" alt="Chicago" class="d-block" style="width:100%">
                 </div>
-                <div class="carousel-item">
-                    <img src="https://picsum.photos/id/23/1920/600" alt="New York" class="d-block" style="width:100%">
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="https://picsum.photos/id/345/1920/600" alt="Chicago" class="d-block" style="width:100%">
                 </div>
             </div>
 
@@ -272,28 +271,32 @@
             </div>
         </div>
         <div class="row text-center">
-            <div class="col-sm-12">
+            <div>
                 <div class="form">
                     <div id="sendmessage">Your message has been sent. Thank you!</div>
                     <div id="errormessage"></div>
                     <form action="" method="post" role="form" class="contactForm">
                         <div class="form-group">
+                            <label for="name" >姓名</label>
                             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
                                 data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                             <div class="validation"></div>
                         </div>
                         <div class="form-group">
+                            <label for="email">電子信箱</label>
                             <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
                                 data-rule="email" data-msg="Please enter a valid email" />
                             <div class="validation"></div>
                         </div>
                         <div class="form-group">
+                            <label for="moblie">行電電話</label>
                             <input type="text" class="form-control" name="mobile" id="mobile"
                                 placeholder="Your Mobile Number" data-rule="minlen:4"
                                 data-msg="Please enter at mobile" />
                             <div class="validation"></div>
                         </div>
                         <div class="form-group">
+                          
                             <textarea class="form-control" name="message" rows="5" data-rule="required"
                                 data-msg="Please write something for us" placeholder="Message"></textarea>
                             <div class="validation"></div>
