修改右下飄起來的top按鈕，改為往下超過頁過後顯示

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>    
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcome</title>
@@ -11,7 +12,8 @@
 
     </style>
 </head>
-<body  class="bg-secondary">
+
+<body class="bg-secondary">
     <!-- 首頁 -->
     <section id="hero">
         <div class="hero-container">
@@ -29,12 +31,11 @@
             </div>
         </div>
     </section>
-
     <!-- 首頁end -->
 
     <!-- menu -->
     <nav class="navbar navbar-expand-sm navbar-light fixed-top" id="neubar">
-        <div class="container">           
+        <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -73,7 +74,11 @@
 
 
     <!-- 輪播 -->
-    <div id="Carousel" class="text-center"><p><h2>最新活動</h2></p></div>
+    <div id="Carousel" class="text-center">
+        <p>
+        <h2>最新活動</h2>
+        </p>
+    </div>
     <div class="container-carousel">
         <!-- Carousel -->
         <div id="demo" class="carousel slide" data-bs-ride="carousel">
@@ -88,7 +93,8 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
-                    <img src="https://picsum.photos/id/1079/1920/600" alt="Los Angeles" class="d-block" style="width:100%">
+                    <img src="https://picsum.photos/id/1079/1920/600" alt="Los Angeles" class="d-block"
+                        style="width:100%">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
                     <img src="https://picsum.photos/id/1077/1920/600" alt="Chicago" class="d-block" style="width:100%">
@@ -107,15 +113,20 @@
             </button>
         </div>
         <!-- <div class="row">
-            <div class="col">
-
-            </div>
-        </div> -->
+             <div class="col">
+ 
+             </div>
+         </div> -->
     </div>
     <!-- 輪播 end -->
 
+
     <!-- movies -->
-    <div id="movie" class="text-center"><p><h2>影片介紹</h2></p></div>
+    <div id="movie" class="text-center">
+        <p>
+        <h2>影片介紹</h2>
+        </p>
+    </div>
     <div class="container-fluid container-1">
         <div class="row h-100">
             <div class="col-sm-12 col-lg-6  p-sm-1 p-lg-5">
@@ -159,9 +170,11 @@
     </div>
 
     <!-- goto Top -->
-    <a id="topBtn" class="btn btn-danger btn-lg position-fixed bg-dark bottom-0 end-0 mb-3 me-3" href="#"
-        role="button ">Top</a>
+    <a id="topBtn" class="btn btn-danger btn-lg position-fixed bg-dark bottom-0 end-0 mb-3 me-3" href="#" role="button"
+        style="display:none">Top</a>
     <br><br><br><br><br>
+
+
 
     <!--  Gallery -->
 
@@ -203,59 +216,59 @@
     </div>
 
 
-<!-- imgcard -->
-<div id="link3"></div>
-<div class="container-fluid container-h mt-3 container-card">
-    <div class="row justify-content-around align-items-center">
-        <div class="col-12 col-lg-4 text-center">
-            <h2>Card Image</h2>
-            <p>Image at the top (card-img-top):</p>
-            <div class="card mx-auto" style="width:400px">
-                <img class="card-img-top" src="https://picsum.photos/id/15/400/300" alt="Card image"
-                    style="width:100%">
-                <div class="card-body">
-                    <h4 class="card-title">John Doe</h4>
-                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer
-                    </p>
-                    <a href="#" class="btn btn-primary">See Profile</a>
+    <!-- imgcard -->
+    <div id="link3"></div>
+    <div class="container-fluid container-h mt-3 container-card">
+        <div class="row justify-content-around align-items-center">
+            <div class="col-12 col-lg-4 text-center">
+                <h2>Card Image</h2>
+                <p>Image at the top (card-img-top):</p>
+                <div class="card mx-auto" style="width:400px">
+                    <img class="card-img-top" src="https://picsum.photos/id/15/400/300" alt="Card image"
+                        style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text some example text. John Doe is an architect and engineer
+                        </p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
                 </div>
+                <br>
             </div>
-            <br>
-        </div>
 
-        <div class="col-12 col-lg-4 text-center">
-            <h2>Card Image</h2>
-            <p>Image at the top (card-img-top):</p>
-            <div class="card mx-auto" style="width:400px">
-                <img class="card-img-top" src="https://picsum.photos/id/13/400/300" alt="Card image"
-                    style="width:100%">
-                <div class="card-body">
-                    <h4 class="card-title">John Doe</h4>
-                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer
-                    </p>
-                    <a href="#" class="btn btn-primary">See Profile</a>
+            <div class="col-12 col-lg-4 text-center">
+                <h2>Card Image</h2>
+                <p>Image at the top (card-img-top):</p>
+                <div class="card mx-auto" style="width:400px">
+                    <img class="card-img-top" src="https://picsum.photos/id/13/400/300" alt="Card image"
+                        style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text some example text. John Doe is an architect and engineer
+                        </p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
                 </div>
+                <br>
             </div>
-            <br>
-        </div>
-        <div class="col-12 col-lg-4 text-center">
-            <h2>Card Image</h2>
-            <p>Image at the top (card-img-top):</p>
-            <div class="card mx-auto" style="width:400px">
-                <img class="card-img-top" src="https://picsum.photos/id/16/400/300" alt="Card image"
-                    style="width:100%">
-                <div class="card-body">
-                    <h4 class="card-title">John Doe</h4>
-                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer
-                    </p>
-                    <a href="#" class="btn btn-primary">See Profile</a>
+            <div class="col-12 col-lg-4 text-center">
+                <h2>Card Image</h2>
+                <p>Image at the top (card-img-top):</p>
+                <div class="card mx-auto" style="width:400px">
+                    <img class="card-img-top" src="https://picsum.photos/id/16/400/300" alt="Card image"
+                        style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text some example text. John Doe is an architect and engineer
+                        </p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
                 </div>
+                <br>
             </div>
-            <br>
         </div>
     </div>
-</div>
-<!-- imgcard end-->
+    <!-- imgcard end-->
 
 
 
@@ -277,7 +290,7 @@
                     <div id="errormessage"></div>
                     <form action="" method="post" role="form" class="contactForm">
                         <div class="form-group">
-                            <label for="name" >姓名</label>
+                            <label for="name">姓名</label>
                             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
                                 data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                             <div class="validation"></div>
@@ -296,7 +309,7 @@
                             <div class="validation"></div>
                         </div>
                         <div class="form-group">
-                          
+
                             <textarea class="form-control" name="message" rows="5" data-rule="required"
                                 data-msg="Please write something for us" placeholder="Message"></textarea>
                             <div class="validation"></div>
@@ -314,7 +327,17 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
+        document.addEventListener('scroll', function () {
+            let myTopBtn = document.getElementById('topBtn');
+            let screenHeight = window.innerHeight;
+            let scrollY = window.scrollY || window.pageYOffset;
 
+            if (scrollY > screenHeight) {
+                myTopBtn.style.display = 'block'; // 顯示
+            } else {
+                myTopBtn.style.display = 'none'; // 隱藏
+            }
+        });
 
 
     </script>
