--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="css/style.css" rel="stylesheet">
     <style>
-
+      
     </style>
 </head>
 
@@ -26,7 +26,8 @@
                 <h2>讓我們來 <span class="rotating">抓住美麗的夢想</span></h2>
                 <div class="actions">
                     <a href="#about" class="btn-services fw-bold text-decoration-none">充實自我</a>
-                    <a href="#services" class="btn-services fw-bold text-decoration-none">實踐我們的腳步</a>
+                    <a href="#services" class="btn-services fw-bold text-decoration-none">實踐腳步</a>
+                    <a href="#Carousel" class="btn-services fw-bold text-decoration-none">最新消息</a>
                 </div>
             </div>
         </div>
@@ -76,7 +77,7 @@
     <!-- 輪播 -->
     <div id="Carousel" class="headfont text-center pt-4">
         <p>
-        <h1>最新活動</h1>
+            <span class="flex-line" style="font-size: xx-large;">最新活動</span>
         </p>
     </div>
     <div class="container-carousel">
@@ -120,7 +121,7 @@
     <!-- movies -->
     <div id="movie" class="headfont text-center pt-5">
         <p>
-        <h1>影片介紹</h1>
+            <span class="flex-line" style="font-size: xx-large;">影片介紹</span>
         </p>
     </div>
     <div class="container-fluid container-1">
@@ -147,7 +148,7 @@
     <!-- Map -->
     <div id="map" class="headfont text-center pt-5">
         <p>
-        <h1>交通地圖</h1>
+            <span class="flex-line" style="font-size: xx-large;">交通地圖</span>
         </p>
     </div>
     <div class="container-fluid container-2">
@@ -180,7 +181,7 @@
     <!-- imgcard -->
     <div id="imgcard" class="headfont text-center pt-5">
         <p>
-        <h1>作品集</h1>
+            <span class="flex-line" style="font-size: xx-large;">作品集</span>
         </p>
     </div>
     <div class="container container-0  container-card">
@@ -350,7 +351,7 @@
 
     <!--  聯絡我們  -->
     <div id="contact_us" class="headfont text-center pt-5">
-        <h1 class="headfont ">聯絡我們</h1>
+        <span class="headfont flex-line" style="font-size: xx-large;">聯絡我們</span>
     </div>
     <div class="container container-1 ">
         <div class="row text-center">
@@ -391,10 +392,11 @@
                                     placeholder="Your Mobile Number" data-rule="minlen:4"
                                     data-msg="Please enter at mobile" />
                             </div>
-                        </div>               
+                        </div>
 
                         <div class="row">
-                            <div class="text-center pt-3"><button type="button" class="btn btn-lg btn-dark">送出</button></div>
+                            <div class="text-center pt-3"><button type="button" class="btn btn-lg btn-dark">送出</button>
+                            </div>
                         </div>
                 </form>
 
