修正封面頁buttons連結

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <h1>歡迎來Wengo</h1>
                 <h2>讓我們來 <span class="rotating">抓住美麗的夢想</span></h2>
                 <div class="actions">
-                    <a href="#about" class="btn-services fw-bold text-decoration-none">充實自我</a>
-                    <a href="#services" class="btn-services fw-bold text-decoration-none">實踐腳步</a>
+                    <a href="#movie" class="btn-services fw-bold text-decoration-none">充實自我</a>
+                    <a href="#imgcard" class="btn-services fw-bold text-decoration-none">實踐腳步</a>
                     <a href="#Carousel" class="btn-services fw-bold text-decoration-none">最新消息</a>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                         <a class="nav-link mx-2 active" href="#movie">影片介紹</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-2 active" href="#imgcard"> 回憶畫廊</a>
+                        <a class="nav-link mx-2 active" href="#imgcard"> 作品集</a>
                     </li>
                     <li class="nav-item dropdown active">
                         <a class="nav-link mx-2 dropdown-toggle" href="#" id="contacts" role="button"
