--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                         <a class="nav-link mx-2 active" aria-current="page" href="#">首頁</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-2 active" href="#Carousel">最新活動</a>
+                        <a class="nav-link mx-2 active" href="#Carousel">最新消息</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-2 active" href="#movie">影片介紹</a>
+                        <a class="nav-link mx-2 active" href="#movie">充實自我</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-2 active" href="#imgcard"> 作品集</a>
@@ -94,14 +94,14 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
-                    <img src="https://picsum.photos/id/1079/1920/600" alt="Los Angeles" class="d-block"
+                    <img src="https://picsum.photos/id/1079/1920/600" title="電影線上訂票系統架設" alt="電影訂票系統" class="d-block"
                         style="width:100%">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="https://picsum.photos/id/1077/1920/600" alt="Chicago" class="d-block" style="width:100%">
+                    <img src="https://picsum.photos/id/1077/1920/600" title="線上社群平臺建置" alt="社群平臺系統" class="d-block" style="width:100%">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="https://picsum.photos/id/345/1920/600" alt="Chicago" class="d-block" style="width:100%">
+                    <img src="https://picsum.photos/id/345/1920/600" title="校園資訊系統建置" alt="校園資訊系統" class="d-block" style="width:100%">
                 </div>
             </div>
 
@@ -121,7 +121,7 @@
     <!-- movies -->
     <div id="movie" class="headfont text-center pt-5">
         <p>
-            <span class="flex-line" style="font-size: xx-large;">影片介紹</span>
+            <span class="flex-line" style="font-size: xx-large;">充實自我-學習的源頭</span>
         </p>
     </div>
     <div class="container-fluid container-1">
@@ -149,7 +149,7 @@
     <!-- Map -->
     <div id="map" class="headfont text-center pt-5">
         <p>
-            <span class="flex-line" style="font-size: xx-large;">交通地圖</span>
+            <span class="flex-line" style="font-size: xx-large;">充實自我-交通地圖</span>
         </p>
     </div>
     <div class="container-fluid container-2">
@@ -186,7 +186,7 @@
     <!-- imgcard -->
     <div id="imgcard" class="headfont text-center pt-5">
         <p>
-            <span class="flex-line" style="font-size: xx-large;">作品集</span>
+            <span class="flex-line" style="font-size: xx-large;">實踐腳步-成果作品集</span>
         </p>
     </div>
     <!-- imgcard-container -->
